@@ -15,6 +15,6 @@ public class EADecideAcceptancePlan extends Plan
 		Double cfp = (Double)getParameter("cfp").getValue();
 		Integer inv = (Integer)getBeliefbase().getBelief("acceptplan_invoked").getFact();
 		getBeliefbase().getBelief("acceptplan_invoked").setFact(Integer.valueOf(inv.intValue()+1));
-		getParameter("accept").setValue(new Boolean(cfp.doubleValue()>100));
+		getParameter("accept").setValue(Boolean.valueOf(cfp.doubleValue()>100));
 	}
 }
