@@ -50,7 +50,7 @@ public class LatencyProperty extends TimedProperty
 					
 					public void methodCallStarted(Object proxy, Method method, Object[] args, Object callid, ServiceInvocationContext context)
 					{
-						times.put(callid, new Long(System.currentTimeMillis()));
+						times.put(callid, Long.valueOf(System.currentTimeMillis()));
 					}
 					
 					public void methodCallFinished(Object proxy, Method method, Object[] args, Object callid, ServiceInvocationContext context)
@@ -108,13 +108,13 @@ public class LatencyProperty extends TimedProperty
 		{
 			double sf = 2d/(10d+1); // 10 periods per default
 			double delta = value-this.value;
-			value = new Long((long)(this.value+sf*delta));
+			value = Long.valueOf((long)(this.value+sf*delta));
 		}
 		
 		if(value!=null)
 		{
 //			System.out.println("Setting value: "+value);
-			super.setValue((long)value);
+			super.setValue(value);
 		}
 	}
 	
